fixed edge cards goes off screen on hover

--- a/src/components/card-style.css
+++ b/src/components/card-style.css
@@ -9,37 +9,52 @@ body {
     display: grid;
     place-items: center;
     overflow: hidden;
-    padding: 0 1.5rem;
+    /*padding: 0 1.5rem;*/
 }
 
 .cards {
     display: flex;
+    padding: 0 5.5rem;
 }
 
 .card {
     border-radius: 12px;    /* rounded corners*/
+    /*width: 12rem;*/
+    /*height: 36vh;*/
 
 /*    Hover off animation so it smooth
         when mouse move away*/
     transition: transform 0.3s ease;
-    box-shadow: 5px 10px 20px 10px rgba(0,0,0,0.253)!important;
+    box-shadow: 5px 10px 15px 10px rgba(0,0,0,0.253)!important;
 }
 
 .card:hover {
     z-index: 1;
-    transform: scale(1.5);
+    transform: scale(2.1) translateY(4rem);
     transition: transform 0.3s ease;
-    box-shadow: 5px 10px 30px 20px rgba(0,0,0,0.253)!important;
+    box-shadow: 10px 20px 24px 9px rgba(0,0,0,0.253)!important;
 }
 
 .card-body {
     padding: 1.2rem 0 !important;
 }
 
+.breakfast {
+    font-size: 15px;
+}
+
+.lunch {
+    font-size: 15px;
+}
+
+.dinner {
+    font-size: 15px;
+}
+
 .card-text {
     text-align: left;
-    font-size: 0.9rem;
-    padding: 0.1rem 1.2rem;
+    font-size: 12px;
+    padding: 0.1rem 1.5rem;
 }
 
 /* For image at the top of the card in case we still need it*/
